<resources>
    <string name="app_name">Recipe App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_world">Hello world</string>

    <string name="breakfast">Breakfast</string>
    <string name="salad">Salad</string>
    <string name="omelette">Omelette</string>
    <string name="bread">Bread</string>
    <string name="prep">Prep</string>
    <string name="alcohol">Alcohol</string>
    <string name="drinks">Drinks</string>
    <string name="side_dish">Side Dish</string>
    <string name="sauce">Sauce</string>
    <string name="snacks">Snacks</string>
    <string name="cereals">Cereals</string>
    <string name="dessert">Dessert</string>
    <string name="main_course">Main course</string>
    <string name="action_home">action_home</string>
    <string name="action_favorites">action_favorites</string>
    <string name="action_more">action_more</string>
    <string name="action_info">action_info</string>
    <string name="action_share">Share</string>
    <string name="action_search">Search</string>
    <string name="recently_viewed">Recently viewed</string>
    <string name="clear_all">Clear all</string>
    <string name="no_recently_viewed_recipes">No recently viewed recipes</string>
    <string name="action_delete">Delete</string>
    <string name="action_select_all">Select all</string>
    <string name="action_clear_all">Clear all</string>
</resources>