<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/recipeFragment"
        android:icon="@drawable/ic_home_24"
        android:orderInCategory="10"
        android:title="@string/action_home"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/favoriteFragment"
        android:icon="@drawable/ic_favorite"
        android:orderInCategory="30"
        android:title="@string/action_favorites"
        app:showAsAction="always" />
    <item android:id="@+id/recipeSearchFragment"
        android:title="@string/action_search"
        android:orderInCategory="20"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_search_24"/>
    <item
        android:id="@+id/more"
        android:icon="@drawable/ic_notes_24"
        android:orderInCategory="40"
        android:title="@string/action_more"
        app:showAsAction="ifRoom" />
</menu>