<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_delete_24"
        android:orderInCategory="10"
        android:title="@string/action_delete"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_selectAll"
        android:icon="@drawable/ic_select_all_24"
        android:orderInCategory="20"
        android:title="@string/action_select_all"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_clearAll"
        android:icon="@drawable/ic_border_clear_24"
        android:orderInCategory="30"
        android:title="@string/action_clear_all"
        app:showAsAction="always" />

</menu>